# FVM_Euler2D_Solver_Cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  boundary_config.yaml  config.yaml
.claude/: settings.local.json
cmake/: FindMSMPI.cmake
cpp/: CMakeLists.txt  config.yaml
cpp/include/fvm2d/: fvm2d.hpp
cpp/include/fvm2d/boundary/: boundary_condition.hpp
cpp/include/fvm2d/core/: config.hpp
cpp/include/fvm2d/gradient/: gaussian_gradient.hpp
cpp/include/fvm2d/io/: tecplot_writer.hpp  vtk_writer.hpp
cpp/include/fvm2d/limiter/: limiters.hpp
cpp/include/fvm2d/mesh/: halo_exchange.hpp  partition_mesh.hpp
cpp/include/fvm2d/physics/: euler_equations.hpp  physics_model.hpp  shallow_water.hpp
cpp/include/fvm2d/solver/: fvm_solver.hpp  residual.hpp
cpp/include/fvm2d/time/: time_integrator.hpp  timestep.hpp
cpp/src/: main.cpp
cpp/src/boundary/: boundary_condition.cpp
cpp/src/gradient/: gaussian_gradient.cpp
cpp/src/io/: config_parser.cpp  tecplot_writer.cpp  vtk_writer.cpp
cpp/src/mesh/: halo_exchange.cpp  mesh_reader.cpp
cpp/src/physics/: euler_equations.cpp  shallow_water.cpp
cpp/src/solver/: fvm_solver.cpp  residual.cpp
cpp/src/time/: time_integrator.cpp  timestep.cpp
cpp/tools/: partition_mesh.py
scripts/: start_mpi_debug.bat
src/: CMakeLists.txt  fvm2d.hpp  main.cpp
src/apps/: CMakeLists.txt  main_reconstruct2d.cpp  main_solver2d.cpp
src/boundary/: CMakeLists.txt  boundary_condition.hpp
src/common/: CMakeLists.txt  fvm_types.hpp
src/core/: config.hpp  types.hpp
src/fvm2d_lib/: CMakeLists.txt  fvm2d.hpp
src/fvm2d_lib/boundary/: CMakeLists.txt  boundary_condition.cpp  boundary_condition.hpp
src/fvm2d_lib/core/: CMakeLists.txt  config.hpp  mpi_wrapper.hpp
src/fvm2d_lib/gradient/: CMakeLists.txt  gaussian_gradient.cpp  gaussian_gradient.hpp
src/fvm2d_lib/io/: CMakeLists.txt  config_parser.cpp  tecplot_writer.cpp  tecplot_writer.hpp  vtk_writer.cpp  vtk_writer.hpp
src/fvm2d_lib/limiter/: CMakeLists.txt  limiters.hpp
src/fvm2d_lib/mesh/: CMakeLists.txt  halo_exchange.cpp  halo_exchange.hpp  mesh_builder.cpp  mesh_builder.hpp  partition_mesh.hpp
src/fvm2d_lib/physics/: CMakeLists.txt  euler_equations.hpp  physics_model.hpp  shallow_water.cpp  shallow_water.hpp
src/fvm2d_lib/solver/: CMakeLists.txt  fvm_solver.cpp  fvm_solver.hpp  residual.hpp
src/fvm2d_lib/time/: CMakeLists.txt  time_integrator.cpp  time_integrator.hpp  timestep.hpp
src/fvm2dlib/: CMakeLists.txt
src/gradient/: CMakeLists.txt  gaussian_gradient.hpp
src/io/: CMakeLists.txt  config_parser.cpp  tecplot_writer.hpp  vtk_writer.hpp
src/limiter/: CMakeLists.txt  limiters.hpp
src/mesh/: CMakeLists.txt  halo_exchange.hpp  mesh_builder.cpp  mesh_builder.hpp  mesh_reader.cpp  partition_mesh.hpp
src/physics/: CMakeLists.txt  euler_equations.cpp  euler_equations.hpp  physics_model.hpp  shallow_water.hpp
src/solver/: CMakeLists.txt  fvm_solver.cpp  fvm_solver.hpp  residual.cpp  residual.hpp
src/tecplot/: CMakeLists.txt  tecplot_writer.cpp  tecplot_writer.hpp
src/time/: CMakeLists.txt  time_integrator.hpp  timestep.cpp  timestep.hpp
src/vtkio/: CMakeLists.txt  vtk_reader.cpp  vtk_writer.cpp
